--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,16 @@
         "alperenersoy/filament-export": "^0.2.8",
         "filament/filament": "^2.17",
         "filament/forms": "^2.0",
+        "filament/spatie-laravel-settings-plugin": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
         "koalafacade/filament-alertbox": "^0.1.2",
         "laravel-frontend-presets/tall": "^5.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.11"
+        "livewire/livewire": "^2.11",
+        "phpsa/filament-password-reveal": "^1.1",
+        "xlite-dev/filament-impersonate": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
